# moxidle

./: Cargo.toml  README.md  flake.nix
.github/workflows/: deploy.yaml  push-to-cachix.yml
contrib/systemd/: moxidle.service.in
ctl/: Cargo.toml
ctl/src/: idle.rs  main.rs
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs  moxidle.rs  screensaver.rs  upower.rs
nix/: home-manager.nix  package.nix
src/: main.rs  usb.rs
