[package]
name = "ctl"
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
zbus = { version = "5.9.0", default-features = false }
anyhow = { version = "1.0.95", default-features = false }
clap = "4.5.27"
tokio = "1.43.0"
serde = { version = "1.0.219", default-features = false }
