[package]
name = "daemon"
description.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
calloop = { version = "0.14.2", features = ["executor"] }
calloop-wayland-source = "0.4.0"
env_logger = { version = "0.11.6", default-features = false }
log = "0.4.25"
serde = { version = "1.0.217", features = ["rc"], default-features = false }
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["client", "staging"] }
futures-lite = { version = "2.6.0", default-features = false }
libpulse-binding = { version = "2.28.2", optional = true , default-features = false }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync"] }
clap = { version = "4.5.27", features = ["derive"] }
rusb = "0.9.4"
anyhow = { version = "1.0.98", default-features = false }
zbus = { version = "5.9.0", features = ["async-io"], default-features = false }
tvix_serde = { git = "https://code.tvl.fyi/depot.git", rev = "a4935331b134eabe169495c73f3a0b60411b59e3", package = "tvix-serde" }

[features]
default = [ "audio" ]
audio = [ "dep:libpulse-binding" ]
